--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,4 @@
-# Dependencies
-node_modules/
-vendor/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-
-# Build outputs
-dist/
-build/
-*.egg-info/
-*.egg
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# IDE
-.vscode/*
-!.vscode/extensions.json
-.idea/
-*.swp
-*.swo
-*.swn
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# OS
-Thumbs.db
-.DS_Store
-
-# Temporary files
-*.tmp
-*.temp
-*.local
-.cache/
-
-# Frontend specific
-frontend/dist/
-frontend/dist-ssr/
-frontend/.vite/
-
-# Backend specific (examples - adjust based on your backend stack)
-backend/__pycache__/
-backend/*.pyc
-backend/venv/
-backend/.venv/
-backend/.pytest_cache/
-backend/.coverage
+/.env
+/backend/*.exe
+/backend/server
+**/*.log
