--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 TEAM_ID=team053
 CLIENT_SECRET=<put-your-secret-here>
-BANKS=vbank,abank
+BANKS=vbank,abank,sbank
 BASE_URL_VBANK=https://open.bankingapi.ru/banks/vbank
 BASE_URL_ABANK=https://open.bankingapi.ru/banks/abank
+BASE_URL_SBANK=https://open.bankingapi.ru/banks/sbank
 CORS_ORIGIN=http://localhost:5173
